--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
 @import 'tailwindcss';
-@import "./css/commons.css";
-@import "./css/inventory.css";
-@import "./css/card.css";
+@import './css/commons.css';
+@import './css/inventory.css';
+@import './css/card.css';
